tests/snapshots/run_wpt_conformance__coreml_gemm_two_float16_2D_tensors_scalar_options_c.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
gemm.https.any.js gemm two float16 2D tensors scalar options.c, coreml
 Failed to build graph: coreml runtime failed: MLModel load failed: Failed to build the model execution plan using a model architecture file '/private/var/folders/fv/xdj1sjg16zndg0hpptw8n1_c0000gn/T/rustnn_coreml_1782983283895_0.mlmodelc/model.mil' with error code: -5.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: f16[3, 4];
  }

  consts {
    operand_1: f16[4, 5] @bytes([53, 56, 6, 51, 84, 57, 16, 56, 75, 51, 243, 47, 32, 59, 130, 57, 60, 58, 10, 58, 104, 59, 92, 57, 215, 56, 75, 50, 228, 59, 68, 56, 5, 57, 220, 57, 194, 56, 106, 53]);
    operand_2: f16[] @bytes([161, 59]);
  }

  nodes {
    [gemmOutput] = gemm(inputA, operand_1, aTranspose=false, alpha=1.0, bTranspose=false, beta=1.0, c=2, label="");
  }

  outputs { gemmOutput; }
}
Error(s) occurred compiling MIL to BNNS graph:
[CreateBnnsGraphProgramFromMIL]: BNNS failed to compile due to an exception: Storage Reader expects file format version 2. at location 
 @ CreateBnnsGraphProgramFromMIL
