tests/snapshots/run_wpt_conformance__coreml_greaterOrEqual_float16_1D_constant_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
greater_or_equal.https.any.js greaterOrEqual float16 1D constant tensors, coreml
 Failed to build graph: coreml runtime failed: MLModel load failed: Failed to build the model execution plan using a model architecture file '/private/var/folders/fv/xdj1sjg16zndg0hpptw8n1_c0000gn/T/rustnn_coreml_1782983286820_0.mlmodelc/model.mil' with error code: -14.

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f16[24] @bytes([6, 200, 134, 197, 50, 192, 117, 199, 115, 197, 231, 72, 54, 195, 23, 68, 17, 197, 84, 62, 173, 69, 87, 196, 199, 62, 218, 65, 0, 199, 14, 193, 198, 61, 221, 71, 200, 69, 124, 63, 48, 184, 243, 54, 120, 72, 161, 62]);
    operand_1: f16[24] @bytes([7, 199, 165, 63, 39, 67, 222, 62, 177, 65, 160, 192, 22, 198, 224, 194, 244, 194, 100, 192, 254, 65, 138, 197, 25, 69, 199, 70, 231, 64, 54, 69, 219, 200, 211, 192, 87, 72, 186, 200, 41, 58, 19, 190, 148, 200, 254, 196]);
  }

  nodes {
    [output] = greaterOrEqual(operand_0, operand_1, label="");
  }

  outputs { output; }
}
E5RT encountered an STL exception. msg = Espresso exception: "Network translation error": MIL->EIR translation error at /private/var/folders/fv/xdj1sjg16zndg0hpptw8n1_c0000gn/T/rustnn_coreml_1782983286820_0.mlmodelc/model.mil:7:12: Storage Reader expects file format version 2..
