tests/snapshots/run_wpt_conformance__coreml_greaterOrEqual_float32_1D_constant_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
greater_or_equal.https.any.js greaterOrEqual float32 1D constant tensors, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: compiler error: Error reading protobuf spec. validator error: unable to deserialize object

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f32[24] @bytes([38, 201, 0, 193, 59, 185, 176, 192, 147, 61, 6, 192, 9, 146, 238, 192, 124, 105, 174, 192, 193, 216, 28, 65, 108, 176, 102, 192, 151, 209, 130, 64, 247, 47, 162, 192, 82, 133, 202, 63, 98, 158, 181, 64, 89, 238, 138, 192, 98, 233, 216, 63, 159, 79, 59, 64, 156, 0, 224, 192, 183, 187, 33, 192, 10, 204, 184, 63, 205, 155, 251, 64, 131, 8, 185, 64, 134, 131, 239, 63, 138, 253, 5, 191, 225, 96, 222, 62, 139, 3, 15, 65, 82, 19, 212, 63]);
    operand_1: f32[24] @bytes([40, 230, 224, 192, 159, 155, 244, 63, 219, 229, 100, 64, 253, 191, 219, 63, 30, 39, 54, 64, 237, 243, 19, 192, 148, 193, 194, 192, 254, 6, 92, 192, 10, 126, 94, 192, 64, 117, 12, 192, 46, 194, 63, 64, 114, 79, 177, 192, 171, 38, 163, 64, 227, 208, 216, 64, 171, 213, 28, 64, 58, 189, 166, 64, 140, 92, 27, 193, 14, 111, 26, 192, 90, 218, 10, 65, 71, 49, 23, 193, 239, 44, 69, 63, 186, 97, 194, 191, 141, 118, 18, 193, 77, 188, 159, 192]);
  }

  nodes {
    [output] = greaterOrEqual(operand_0, operand_1, label="");
  }

  outputs { output; }
}
