tests/snapshots/run_wpt_conformance__coreml_greaterOrEqual_float32_5D_inputs_with_alternating_broadcast_axes.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
greater_or_equal.https.any.js greaterOrEqual float32 5D inputs with alternating broadcast axes, coreml
 Failed to dispatch graph: coreml runtime failed: prediction failed: MultiArray shape (1 x 2 x 1 x 2 x 1) does not match the shape (2 x 2 x 2 x 2 x 2) specified in the model description

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: f32[2, 1, 2, 1, 2];
    inputB: f32[1, 2, 1, 2, 1];
  }

  nodes {
    [output] = greaterOrEqual(inputA, inputB, label="");
  }

  outputs { output; }
}
