tests/snapshots/run_wpt_conformance__coreml_greaterOrEqual_float32_5D_tensor_and_broadcastable_0D_scalar.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
greater_or_equal.https.any.js greaterOrEqual float32 5D tensor and broadcastable 0D scalar, coreml
 Failed to dispatch graph: coreml runtime failed: input dtype mismatch: model expects 2-byte elements (code 65552), but input is Float32 (4-byte); type conversion is not supported for this input

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: f32[2, 2, 2, 2, 2];
    inputB: f32[];
  }

  nodes {
    [output] = greaterOrEqual(inputA, inputB, label="");
  }

  outputs { output; }
}
