tests/snapshots/run_wpt_conformance__coreml_greater_float32_1D_constant_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
greater.https.any.js greater float32 1D constant tensors, coreml
 Failed to dispatch graph: coreml runtime failed: prediction failed: Feature inputB is required but not specified.

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f32[24] @bytes([122, 161, 172, 192, 83, 14, 230, 192, 93, 236, 70, 192, 248, 72, 159, 64, 172, 146, 163, 64, 191, 242, 196, 191, 245, 9, 181, 63, 138, 171, 111, 191, 114, 245, 192, 192, 223, 219, 64, 192, 178, 244, 46, 62, 133, 166, 236, 64, 216, 183, 229, 64, 138, 112, 154, 192, 228, 78, 1, 192, 20, 37, 81, 192, 51, 28, 15, 65, 197, 211, 189, 192, 4, 253, 52, 63, 223, 176, 49, 64, 218, 148, 122, 63, 40, 40, 200, 192, 208, 22, 141, 64, 38, 207, 216, 192]);
    operand_1: f32[24] @bytes([174, 247, 196, 192, 54, 191, 128, 192, 175, 123, 190, 64, 185, 159, 19, 64, 13, 59, 49, 192, 84, 155, 120, 191, 69, 113, 156, 63, 108, 227, 146, 64, 166, 158, 17, 65, 125, 231, 159, 192, 89, 213, 153, 192, 179, 181, 14, 65, 89, 135, 102, 63, 105, 218, 53, 192, 161, 254, 52, 192, 114, 173, 7, 65, 217, 230, 250, 192, 98, 108, 19, 65, 137, 111, 159, 64, 235, 119, 32, 192, 146, 147, 144, 192, 21, 158, 5, 65, 131, 39, 197, 192, 37, 138, 60, 63]);
  }

  nodes {
    [output] = greater(operand_0, operand_1, label="");
  }

  outputs { output; }
}
